--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -19,7 +19,7 @@ PD8.Locked=true
 PC6.GPIO_Label=CS_mcroSD
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=PinState,GPIO_Label
 PE10.GPIO_PuPd=GPIO_PULLUP
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
 PD4.Locked=true
@@ -40,7 +40,7 @@ TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Clo
 PD4.Signal=GPIO_Output
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=GPIO_Output
-SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.CalculateBaudRate=5.25 MBits/s
 PC3.Signal=I2S2_SD
 PD8.Signal=GPIO_Output
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
@@ -114,7 +114,7 @@ PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PD15.Signal=GPIO_Output
 ProjectManager.CustomerFirmwarePackage=
 PC0.PinState=GPIO_PIN_SET
-PC4.GPIOParameters=GPIO_Label
+PC4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -123,6 +123,7 @@ I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
 Mcu.PinsNb=68
+PC4.PinState=GPIO_PIN_SET
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
@@ -133,8 +134,8 @@ PC2.Signal=SPI2_MISO
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=OTG_FS_DM
 PE1.GPIO_PuPd=GPIO_NOPULL
-PB14.Locked=true
 PC0.Signal=GPIO_Output
+PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
@@ -260,6 +261,7 @@ PE3.Signal=GPIO_Output
 PE2.Locked=true
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
+PA3.PinState=GPIO_PIN_RESET
 PA8.Mode=I2C
 I2S3.Instance=SPI$Index
 SH.GPXTI1.ConfNb=1
@@ -350,6 +352,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Mcu.IP12=USB_HOST
 Mcu.IP11=TIM3
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA6.GPIO_PuPd=GPIO_NOPULL
 PB4.Mode=Full_Duplex_Master
 Mcu.IP13=USB_OTG_FS
@@ -391,7 +394,7 @@ PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 SPI2.Direction=SPI_DIRECTION_2LINES
 PC5.Signal=GPIO_Input
 PC0.GPIO_PuPd=GPIO_NOPULL
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 PE2.GPIO_Label=T_MOSI
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 PC14-OSC32_IN.Locked=true
@@ -414,12 +417,13 @@ PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
 PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 ProjectManager.NoMain=false
 SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,BaudRatePrescaler,CalculateBaudRate
+PC4.GPIO_PuPd=GPIO_NOPULL
 PC11.Signal=GPIO_Output
 PC4.Signal=GPIO_Output
 PC10.Mode=Full_Duplex_Master
 ProjectManager.DefaultFWLocation=true
-PE14.GPIO_Label=KEYBOARD_COLUMN_3
 PC2.Mode=Full_Duplex_Master
+PE14.GPIO_Label=KEYBOARD_COLUMN_3
 PD9.Signal=GPIO_Output
 PD5.Signal=GPIO_Input
 PB12.Locked=true
