--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -3,14 +3,15 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=I2C2
+Mcu.IP0=I2C3
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=RNG
 Mcu.IP4=SPI1
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP7=TIM1
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -27,21 +28,21 @@ Mcu.Pin18=PB2
 Mcu.Pin19=PE14
 Mcu.Pin2=PE4
 Mcu.Pin20=PE15
-Mcu.Pin21=PB10
-Mcu.Pin22=PB11
-Mcu.Pin23=PB12
-Mcu.Pin24=PB13
-Mcu.Pin25=PB14
-Mcu.Pin26=PB15
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD10
+Mcu.Pin21=PB12
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PD8
+Mcu.Pin26=PD9
+Mcu.Pin27=PD10
+Mcu.Pin28=PD11
+Mcu.Pin29=PD12
 Mcu.Pin3=PE5
-Mcu.Pin30=PD11
-Mcu.Pin31=PD12
-Mcu.Pin32=PD13
-Mcu.Pin33=PD14
-Mcu.Pin34=PD15
+Mcu.Pin30=PD13
+Mcu.Pin31=PD14
+Mcu.Pin32=PD15
+Mcu.Pin33=PC9
+Mcu.Pin34=PA8
 Mcu.Pin35=PA9
 Mcu.Pin36=PA11
 Mcu.Pin37=PA13
@@ -56,12 +57,13 @@ Mcu.Pin44=PE0
 Mcu.Pin45=PE1
 Mcu.Pin46=VP_RNG_VS_RNG
 Mcu.Pin47=VP_SYS_VS_Systick
+Mcu.Pin48=VP_TIM1_VS_no_output1
 Mcu.Pin5=PC13-ANTI_TAMP
 Mcu.Pin6=PC14-OSC32_IN
 Mcu.Pin7=PC15-OSC32_OUT
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
-Mcu.PinsNb=48
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -78,6 +80,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA11.GPIO_Label=OTG_FS_DM
@@ -127,16 +130,14 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.Mode=I2C
+PA8.Signal=I2C3_SCL
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA9.GPIO_Label=VBUS_FS
 PA9.GPIO_Mode=GPIO_MODE_INPUT
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=KEYBOARD_COLUMN_2
 PB12.GPIO_PuPd=GPIO_PULLUP
@@ -214,6 +215,8 @@ PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.Signal=I2S2_SD
+PC9.Mode=I2C
+PC9.Signal=I2C3_SDA
 PD10.GPIOParameters=PinState,GPIO_Label
 PD10.GPIO_Label=KEYBOARD_ROW_2
 PD10.Locked=true
@@ -343,7 +346,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_RNG_Init-RNG-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_RNG_Init-RNG-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -393,10 +396,18 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
+TIM1.Period=10000
+TIM1.Prescaler=16800
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 board=STM32F407G-DISC1
 boardIOC=true
 isbadioc=false
